<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/detailToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/midnight_light"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/backTab"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:contentPadding="4dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/midnight_light">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/back" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_bold_semi"
            android:text="@string/item_username"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="20sp"/>
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/midnight_light"
        android:elevation="10dp"
        android:paddingBottom="12dp"
        app:flow_horizontalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailToolbar">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivUserProfile"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/account_circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--    Repositories    -->
        <TextView
            android:id="@+id/tvPublicReposNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/reposNum"
            android:textColor="@color/vanilla"
            android:textSize="20sp"
            android:layout_marginBottom="-5dp"
            app:layout_constraintBottom_toTopOf="@+id/tvPublicRepos"
            app:layout_constraintEnd_toEndOf="@+id/tvPublicRepos"
            app:layout_constraintStart_toStartOf="@+id/tvPublicRepos" />

        <TextView
            android:id="@+id/tvPublicRepos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="-25dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/repositories"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivUserProfile"
            app:layout_constraintStart_toEndOf="@id/ivUserProfile"
            app:layout_constraintTop_toTopOf="@id/ivUserProfile" />
        <!--    Repositories    -->

        <!--    Followers    -->
        <TextView
            android:id="@+id/tvFollowersNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/followNum"
            android:textColor="@color/vanilla"
            android:textSize="20sp"
            android:layout_marginBottom="-5dp"
            app:layout_constraintBottom_toTopOf="@+id/tvFollowers"
            app:layout_constraintEnd_toEndOf="@+id/tvFollowers"
            app:layout_constraintStart_toStartOf="@+id/tvFollowers" />

        <TextView
            android:id="@+id/tvFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/followers"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/tvPublicRepos"
            app:layout_constraintStart_toEndOf="@id/tvPublicRepos"
            app:layout_constraintTop_toTopOf="@id/tvPublicRepos" />
        <!--    Followers    -->

        <!--    Following    -->
        <TextView
            android:id="@+id/tvFollowingNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/followNum"
            android:textColor="@color/vanilla"
            android:textSize="20sp"
            android:layout_marginBottom="-5dp"
            app:layout_constraintBottom_toTopOf="@+id/tvFollowing"
            app:layout_constraintEnd_toEndOf="@+id/tvFollowing"
            app:layout_constraintStart_toStartOf="@+id/tvFollowing" />

        <TextView
            android:id="@+id/tvFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/following"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/tvFollowers"
            app:layout_constraintStart_toEndOf="@id/tvFollowers"
            app:layout_constraintTop_toTopOf="@id/tvFollowers" />
        <!--    Following    -->

        <TextView
            android:id="@+id/tvFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/item_fullname"
            android:textColor="@color/vanilla"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivUserProfile" />

        <ImageView
            android:id="@+id/ivCalendar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginTop="-5dp"
            android:src="@drawable/baseline_calendar"
            app:layout_constraintBottom_toBottomOf="@+id/tvMemberSince"
            app:layout_constraintEnd_toStartOf="@+id/tvMemberSince"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvMemberSince" />

        <TextView
            android:id="@+id/tvMemberSince"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/item_since"
            android:textColor="@color/vanilla"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/ivCalendar"
            app:layout_constraintTop_toBottomOf="@id/tvFullName" />

        <ImageView
            android:id="@+id/ivLocation"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:src="@drawable/baseline_location_pin"
            app:layout_constraintBottom_toBottomOf="@+id/tvLocation"
            app:layout_constraintEnd_toStartOf="@+id/tvLocation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvLocation" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/item_location"
            android:textColor="@color/vanilla"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/ivLocation"
            app:layout_constraintTop_toBottomOf="@id/tvMemberSince" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/midnight"
        android:contentDescription="@string/tab_desc"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileCard"
        app:tabGravity="fill"
        app:tabIndicatorAnimationMode="elastic"
        app:tabIndicatorColor="@color/white"
        app:tabIndicatorFullWidth="false"
        app:tabMode="fixed"
        app:tabTextColor="@android:color/white" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFavorite"
        app:backgroundTint="@color/white"
        app:tint="@color/midnight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:srcCompat="@drawable/ic_favorite_unfilled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/favorite_button" />

    <ImageView
        android:id="@+id/ivError"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/baseline_retrieve_failed"
        android:layout_marginTop="210dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/failed_retrieve_msg"
        android:textColor="@color/midnight"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivError" />


</androidx.constraintlayout.widget.ConstraintLayout>